2002/06/19 svenwiegand
- Enabled debug database for release builds.
- Fixed hanging-problem when closing document on fast systems.
- Updated german translation of newer changes made to the resources.
- Updated version id to 1 Beta 6.00.
- Updated paths of system DLLs in installation script to make them match 
  my XP paths.
- Added manifest file to TXC-resources to make TXC use modern controls on 
  WinXP.
- When the path for spelling dictionarys is loaded from the registry, 
  it will be checked, if the path is valid and otherwise a default path 
  will be used.

2002/06/01 niteria
- Updated defaults for cleaning the project.
  (tempfile of package endnotes [%bm.ent] added)
- Finished Documentation of Placeholders.

2002/05/30 niteria
- Fixed Bug 555447: TeX-Output: Fails for names over 2 lines
- Very small corrections to CPathTool and CCrystalTextView.

2002/05/24 niteria
- Blocking of StructureParser fixed NOW.

2002/05/20 niteria
- Feature 558433 implemented: InsertGraphics with scaling to textwidth.

2002/05/17 christianwelzel
- Feature 539142: Configurable Default Path for Documents modified.
  The insert picture dialog uses this default path also.

2002/05/10 christianwelzel
- Feature 539142: Configurable Default Path for Documents modified.
  If a project is opened, the project path will be used.
  If a file is opened, the file path will be used.

2002/05/08 niteria
- Fixed Bug 553800: Splash-Screen hides other windows.
- Added directory "TeXTest" with files to test TXC with.
  Their main purpose is to reproduce several bugs or behaviours coming
  up from missing features. You are invited to contribute to this section!

2002/05/03 christianwelzel
- Feature 539142: Configurable Default Path for Documents modified
  If this path is empty, the default personal directory will be used
- Configurable Project Path removed

2002/05/01 cnorris
- Much improved structure parser blocking
- Made spell checker dictionary format more tolerant